qtdemux: compute framerate from average sample duration

https://bugzilla.gnome.org/show_bug.cgi?id=703350